Fix sample newsletter appearance on mobile

--- a/app/assets/stylesheets/newsletter.css.less
+++ b/app/assets/stylesheets/newsletter.css.less
@@ -346,7 +346,7 @@
         max-width:none !important;
         max-height:none !important;
         width:100% !important;
-        height:100% !important;
+        height:auto !important;
         padding-bottom:15px !important;
       }
 
